tests/reference/asr-test_binop1-50b63f6.stderr
semantic error: Type mismatch in binary operator; the types must be compatible
 --> tests/errors/test_binop1.py:6:11
  |
6 |     print(x+s)
  |           ^ ^ type mismatch (i32 and Allocatable[str])
